# Basic-Invoice-Generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cookies.txt  customer.csv  database.py  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt  view?number=005&year=2568
database/: export_items.csv
templates/: index.html  invoice.html  login.html
